@@ -92,10 +92,13 @@ certificate key = ${certificate-path}/server.key
 ; client certificates - require client certificate (list of pem files).
 ;client certificates = ${certificate-path}/client1.pem, ${certificate-path}/client2.pem
 
-; password - must be changed from default value, set to empty string to disable passwords.
+; password - must be changed from default value
 ; password can be stored encrypted when using the format: <HASH>:<hashed password>, ex.: SHA256:...
 ; supported hash algorithms are SHA256, you can use "snclient hash" to generate password hashes.
 password = CHANGEME
+
+; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
+require password = true
 
 
 [/settings/ExporterExporter/server]
@@ -203,6 +206,9 @@ url prefix = /node
 ; kill already running exporters based on path and args
 kill orphaned = enabled
 
+; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
+require password = true
+
 
 [/settings/Prometheus/server]
 ; PrometheusServer - Enable /metrics HTTP server for the agent itself. (overrides the global option from the /modules section if uncommented)
@@ -213,6 +219,9 @@ port = 9999
 
 ; use ssl - This option controls if SSL will be enabled.
 use ssl = true
+
+; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
+require password = true
 
 ; use default web attributes here, ex.: password, allowed hosts, certificates, etc...
 
@@ -234,6 +243,8 @@ allow arguments = true
 ; allow nasty characters - This option determines whether or not the we will allow clients to specify nasty (as defined in nasty characters) characters in arguments.
 allow nasty characters = false
 
+; use default web attributes here, ex.: password, allowed hosts, certificates, etc...
+
 
 [/settings/WEBAdmin/server]
 ; WEBAdminServer - Enable HTTP REST API requests for administrative tasks. (overrides the global option from the /modules section if uncommented)
@@ -249,6 +260,9 @@ use ssl = ${/settings/WEB/server/use ssl}
 ; password can be stored encrypted when using the format: <HASH>:<hashed password>, ex.: SHA256:...
 ; supported hash algorithms are SHA256, you can use "snclient hash" to generate password hashes.
 password = CHANGEME
+
+; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
+require password = true
 
 ; use default web attributes here, ex.: password, allowed hosts, certificates, etc...
 
@@ -280,6 +294,9 @@ url prefix = /node
 
 ; kill already running exporters based on path and args
 kill orphaned = enabled
+
+; require password - Allow connections without password. This option determines whether clients are allowed to connect without a password at all.
+require password = true
 
 
 ; Builtin plugins settings - General settings for the builtin plugins
